2007-07-16  Aaron Stone  <aaron@serendipity.cx>

	* export.c, man/dbmail-export.txt:
	Require the -u argument, add support for wildcards.

2007-07-15  Paul J Stevens <paul@nfg.nl>

	* modules/authldap.c:
	use sigaction instead of signal in ldap code

2007-07-14  Paul Stevens <paul@nfg.nl>

	* VERSION:
	v2.2.6-rc1

2007-07-05  Paul Stevens <paul@nfg.nl>

	* ChangeLog, modules/dbsqlite.c:
	add incremental sleep time between retries in case of sqlite locks

2007-07-12  Aaron Stone  <aaron@serendipity.cx>

	* export.c, man/dbmail-export.txt:
	New options: -b basedir, -r recursive.
	* dbmail-mailbox.c:
	Tell GMime that it does not own the dbmail_mailbox_dump file pointer.
	* contrib/dbmail-removeversion.patch contrib/expirebox.sh:
	Removed obsolete patch (see banner option in dbmail.conf) and obsolete
	mail expiry script (see dbmail-export -s, -m, -d options).

2007-07-06  Aaron Stone  <aaron@serendipity.cx>

	* dsn.c, dsn.c, pipe.c, main.c:
	Properly fixed incorrect dsn class for mailbox over quota (closes bug
	#617)
	* dbmailtypes.h, config.c, dbmodule.c, modules/dbsqlite.c,
	modules/dbmysql.c, modules/dbpgsql.c:
	Added three new config options for escalating the trace level of slow
	queries. Moved query timing from each modules/dbfoo.c to dbmodule.c.
	* export.c:
	Removed extra words from help output.

2007-07-05  Paul J Stevens <paul@nfg.nl>

	* modules/dbsqlite.c:
	add incremental sleep time between retries in case of sqlite locks

2007-07-04  Paul Stevens <paul@nfg.nl>

	* modules/dbsqlite.c:
	add retry loop to sqlite db_query

2007-07-02  Paul Stevens <paul@nfg.nl>

	* ChangeLog, dbmail-imapsession.c:
	fix g_strncasecmp problem (JF)
	* ChangeLog, serverparent.c:
	allow zero spare children
	* dbmail-imapsession.c, imapd.c:
	fix sig11 in iconv code (bug #579)

2007-07-02  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	fix g_strncasecmp problem (JF)
	* ChangeLog, serverparent.c:
	allow zero spare children
	* dbmail-imapsession.c, imapd.c: